# axor-probe

./: .gitignore  README.md  _debug_out.txt  _debug_repro.py  pyproject.toml
.github/workflows/: ci.yml
axor_probe/calibration/: pipeline.py
axor_probe/comparator/: accumulator.py  residual.py  scorer.py  semantic.py  structural.py  triangulator.py
axor_probe/controller/: scheduler.py
axor_probe/executor/: readout.py  runner.py  snapshot.py
axor_probe/integration/: core.py  core_tap.py  eval.py  sentinel.py
axor_probe/pipeline/: orchestrator.py
axor_probe/probes/: library.py  schema.py  validator.py
axor_probe/repair/: __init__.py  localize.py  oracle.py
axor_probe/shadow/: context.py  instance.py  isolation.py
axor_probe/signals/: drift.py  report.py
axor_probe/storage/: audit.py  redactor.py
examples/: drift_bench.py  openrouter_inference.py  probe_smoke.py  test_drift_bench.py
tests/: test_accumulator_redactor.py  test_comparator.py  test_core_tap.py  test_executor.py  test_integrations.py  test_judge_redaction.py  test_localize.py  test_pipeline.py  test_readout.py  test_residual.py  test_scheduler.py  test_schemas.py  test_shadow.py
