[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axor-probe"
version = "0.1.0"
description = "Runtime behavioral drift detection via shadow instance comparison"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["agents", "governance", "security", "drift", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Base package has no required deps — inference callable is injected by caller.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["axor_probe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["axor_probe"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
